# HGInstaller

./: .gitignore  README.md  main.py  pyproject.toml
hginstaller/: __init__.py  hg_installer.py  hg_settings.py  inno_builder.py  py2pyd.py  pyi_builder.py  pyproject_utils.py  template.iss  ui2py.py
