[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hginstaller"
version = "0.1.0"
description = "Python 빌드 자동화 도구 - PyInstaller, Inno Setup, UI 변환, PYD 변환 등을 자동화하는 라이브러리"
readme = "README.md"
requires-python = ">=3.8.1"
license = {text = "MIT"}
keywords = ["build", "automation", "pyinstaller", "inno-setup", "cython", "pyd", "ui-converter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "tqdm>=4.65.0",
    "Cython>=3.0.0",
    "platformdirs>=4.3.6",
    "pyinstaller>=6.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/LHG4650/HGInstaller"
Documentation = "https://github.com/LHG4650/HGInstaller#readme"
Repository = "https://github.com/LHG4650/HGInstaller.git"
Issues = "https://github.com/LHG4650/HGInstaller/issues"

[tool.setuptools]
packages = ["hginstaller"]

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
